<resources>
    <string name="app_name">Library_Management_System</string>
    <string name="service">
        一、用户个人信息保护
        \n
        1.1 保护用户个人信息是的一项基本原则，本软件将按照本协议及《隐私政策》、有关本软件及服务的隐私保护指引（如有）的规定收集、使用您的个人信息。
        \n
        1.2 您在注册账号或使用本服务的过程中，可能需要填写一些必要的信息。若国家法律法规或政策规定，需要您提供或填写真实身份信息的（包括但不限于身份证号、手机号等信息），您应当按要求提供或填写。若您填写的信息不完整、不真实或不符合国家相关规定，则可能无法使用本服务或在使用过程中受到限制。
        \n
        您不得以他人身份资料进行实名注册。否则，本软件有权终止为您提供服务，并有权对您的账号采取包括但不限于警告、限制或禁止使用账号全部或部分功能、删除账号相关数据或信息、账号封禁等处理措施，因此造成的一切后果由您自行承担。
        \n
        1.3 您应对通过本软件及相关服务了解、接收或可接触到的包括但不限于其他用户在内的任何人的个人信息予以充分尊重。您不应搜集、复制、存储、传播或以其他任何方式使用其他用户的个人信息，否则，由此产生的后果由您自行承担。
        \n
        1.4 本软件将依法并尽商业上的合理努力来保护您的个人信息安全。
        \n
        1.5 本公司非常重视并将严格依法保护儿童个人信息。有关儿童个人信息保护详见《儿童隐私保护声明》。
        \n
        二、用户行为规范
        \n
        2.1 信息内容规范
        \n
        2.1.1 如您使用本软件及服务上传、发表或发布观点、数据、文字、信息、用户名、图片、照片、个人信息、音频、视频文件、链接及其他内容的（以下统称“信息内容”）， 您保证有完全的权利上传、发表或发布该等信息内容或已获得相关权利人的合法授权，且该等信息内容未侵犯腾讯及任何第三方合法权益，也不存在任何违法违规情形。
        \n
        2.1.2 您在使用本服务时须遵守法律法规，不得制作、复制、发布、传播含有下列内容的信息内容或从事相关行为，也不得为制作、复制、发布、传播含有下列内容的信息内容或从事相关行为提供便利：
        \n
        （1）反对宪法所确定的基本原则的；
        \n
        （2）危害国家安全，泄露国家秘密，颠覆国家政权，破坏国家统一的；
        \n
        （3）损害国家荣誉和利益的；
        \n
        （4）煽动民族仇恨、民族歧视，破坏民族团结的；
        \n
        （5）破坏国家宗教政策，宣扬邪教和封建迷信的；
        \n
        （6）散布谣言，扰乱社会秩序，破坏社会稳定的；
        \n
        （7）散布淫秽、色情、赌博、暴力、凶杀、恐怖或者教唆犯罪的；
        \n
        （8）侮辱或者诽谤他人，侵害他人合法权益的；
        \n
        （9）国家法律法规禁止的其他内容。
        \n
        三、服务的中止或终止
        \n
        3.1 如您书面通知不接受本协议或对其的修改，本公司可中止或终止向您提供全部或部分本服务。
        \n
        3.2 因不可抗力因素导致您无法继续使用本服务或无法提供本服务的，任何一方均有权随时终止协议。
        \n
        3.3 本协议约定的其他中止或终止条件发生或实现的，本公司可中止或终止向您提供全部或部分本服务。
        \n
        3.4 您在使用本软件及相关服务中产生的数据的所有权和知识产权归本公司所有，本公司有权保存、处置该数据，但国家法律法规另有规定的从其规定。
        \n
        本公司对其合法处理数据形成的相关数据产品和服务享有法律法规规定的财产权益。
        \n
        四、最终解释权归本人所有，未经允许不得传播
        \n
        \n
        \n
    </string>
    <string name="study">learning</string>
    <string name="tolk">不积硅步 无以至千里</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="send">发送</string>
    <string name="score">score：</string>
    <string name="clear">清理画布</string>
    <string name="info">计算器</string>
    <string name="name">请输入</string>
    <string name="name_9">9</string>
    <string name="name_8">8</string>
    <string name="name_7">7</string>
    <string name="name_6">6</string>
    <string name="name_5">5</string>
    <string name="name_4">4</string>
    <string name="name_3">3</string>
    <string name="name_2">2</string>
    <string name="name_1">1</string>
    <string name="name_0">0</string>
    <string name="name_left">(</string>
    <string name="name_right">)</string>
    <string name="name_10">+</string>
    <string name="name_11">-</string>
    <string name="name_12">*</string>
    <string name="name_13">/</string>
    <string name="name_14">=</string>
    <string name="name_15">.</string>
    <string name="name_16">CE</string>
    <string name="name_17">X</string>
    <string name="name_18">-</string>
    <string name="name_19">PI</string>
    <string name="name_20"> </string>
    <string name="name_result">结果</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="reset">RESET</string>
</resources>
